[gd_scene load_steps=4 format=3 uid="uid://sseis2aiqis1"]

[ext_resource type="Script" path="res://Scene/granade.gd" id="1_4aqw2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_xf8fu"]
rough = true
bounce = 0.32

[sub_resource type="LabelSettings" id="LabelSettings_r3wci"]
font_size = 24
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Granade" type="RigidBody2D" groups=["weapons"]]
collision_layer = 2
collision_mask = 5
mass = 1.08
physics_material_override = SubResource("PhysicsMaterial_xf8fu")
lock_rotation = true
angular_damp = 100.0
script = ExtResource("1_4aqw2")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 1, 0.270588, 1)
polygon = PackedVector2Array(0, -8, -8, 0, 0, 8, 8, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -8, -8, 0, 0, 8, 8, 0)

[node name="ExplosionSize" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ExplosionSize"]
polygon = PackedVector2Array(0, -80, -64, -64, -88, 0, -64, 64, 0, 80, 64, 64, 88, 0, 64, -64)

[node name="Label" type="Label" parent="."]
layout_direction = 2
offset_right = 15.0
offset_bottom = 27.0
text = "3"
label_settings = SubResource("LabelSettings_r3wci")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="ExplosionSize" to="." method="_on_explosion_size_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
